# EEC_s24_research_paper_benchmarking

./: platformio.ini
components/CycloneCRYPTO/: CMakeLists.txt
components/CycloneCRYPTO/aead/: ccm.c  ccm.h  chacha20_poly1305.c  chacha20_poly1305.h  gcm.c  gcm.h
components/CycloneCRYPTO/cipher/: aes.c  aes.h  aria.c  aria.h  blowfish.c  blowfish.h  camellia.c  camellia.h  cast128.c  cast128.h  cast256.c  cast256.h  chacha.c  chacha.h  des.c  des.h  des3.c  des3.h  idea.c  idea.h  mars.c  mars.h  present.c  present.h  rc2.c  rc2.h  rc4.c  rc4.h  rc6.c  rc6.h  seed.c  seed.h  serpent.c  serpent.h  sm4.c  sm4.h  tea.c  tea.h  trivium.c  trivium.h  (+6 more)
components/CycloneCRYPTO/cipher_modes/: cbc.c  cbc.h  cfb.c  cfb.h  ctr.c  ctr.h  ecb.c  ecb.h  ofb.c  ofb.h  xts.c  xts.h
components/CycloneCRYPTO/core/: crypto.h
components/CycloneCRYPTO/ecc/: ec.c  ec.h  ec_curves.c  ec_curves.h  ecdh.c  ecdh.h  ecdsa.c  ecdsa.h  ed25519.c  ed25519.h  ed448.c  ed448.h  eddsa.c  eddsa.h  sm2.c  sm2.h  x25519.c  x25519.h  x448.c  x448.h
components/CycloneCRYPTO/encoding/: asn1.c  asn1.h  base64.c  base64.h  base64url.c  base64url.h  oid.c  oid.h  radix64.c  radix64.h
components/CycloneCRYPTO/hash/: blake2b.c  blake2b.h  blake2b160.c  blake2b160.h  blake2b256.c  blake2b256.h  blake2b384.c  blake2b384.h  blake2b512.c  blake2b512.h  blake2s.c  blake2s.h  blake2s128.c  blake2s128.h  blake2s160.c  blake2s160.h  blake2s224.c  blake2s224.h  blake2s256.c  blake2s256.h  md2.c  md2.h  md4.c  md4.h  md5.c  md5.h  ripemd128.c  ripemd128.h  ripemd160.c  ripemd160.h  sha1.c  sha1.h  sha224.c  (+25 more)
(+162 files in other folders)
